tests/integrations/basic-fail/tests/actual_tests_bless/foomp-rustfix-fail.stderr
error[E0308]: mismatched types
 --> $DIR/foomp-rustfix-fail.rs:5:21
  |
5 |     let x: String = 42;
  |            ------   ^^- help: try using a conversion method: `.to_string()`
  |            |        |
  |            |        expected `String`, found integer
  |            expected due to this

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
