tests/integrations/basic-fail/tests/actual_tests_bless/foomp-rustfix-fail.rs
//@run-rustfix
#![deny(warnings)]

fn main() {
    let x: String = 42;
    //~^ ERROR: mismatched types
}
